--- a/templates/elements-tab.html
+++ b/templates/elements-tab.html
@@ -1,11 +1,10 @@
-<section class="elements-tab">
-    <h2>Elemental Triangle</h2>
-    <p>This is your elemental triangle space. You’ll track your three elements and their levels here.</p>
-  
-    <ul>
-      <li><strong>Electro</strong>: Level 1</li>
-      <li><strong>Discipline</strong>: Level 2</li>
-      <li><strong>Divinity-as-is-Beast</strong>: Level 0</li>
-    </ul>
-  </section>
-  
+<section class="elements-tab-inner">
+  <h2>Elemental Triangle</h2>
+  <p>This is your elemental triangle space. You’ll track your three elements and their levels here.</p>
+
+  <ul>
+    <li><strong>Electro</strong>: Level 1</li>
+    <li><strong>Discipline</strong>: Level 2</li>
+    <li><strong>Divinity-as-is-Beast</strong>: Level 0</li>
+  </ul>
+</section>
