--- a/templates/elements-tab.html
+++ b/templates/elements-tab.html
@@ -1,7 +1,6 @@
 <section class="elemental-circle-container">
-  <div class="circle">
-    <div class="node top"></div>
-    <div class="node bottom-left"></div>
-    <div class="node bottom-right"></div>
-  </div>
+  <div class="circle center"></div>
+  <div class="circle node node-1"></div>
+  <div class="circle node node-2"></div>
+  <div class="circle node node-3"></div>
 </section>
