--- a/styles/sheet.css
+++ b/styles/sheet.css
@@ -23,3 +23,32 @@
   height: 380px;
 }
 
+.circle-controls {
+  text-align: center;
+  margin-top: 2em;
+}
+
+.circle-controls label {
+  color: #00ffff;
+  font-weight: bold;
+  margin-right: 0.5em;
+}
+
+.circle-controls input {
+  width: 50px;
+  text-align: center;
+  border-radius: 4px;
+  border: 1px solid #00ffff;
+  background: black;
+  color: #00ffff;
+}
+
+.circle-controls button {
+  margin-left: 1em;
+  background: #00ffff;
+  color: black;
+  border: none;
+  padding: 4px 10px;
+  cursor: pointer;
+  border-radius: 4px;
+}
