--- a/templates/elements-tab.html
+++ b/templates/elements-tab.html
@@ -1,10 +1,12 @@
-<section class="elemental-circle-container">
-  <div class="circle center" id="main-circle"></div>
-  <!-- Triangle Nodes will be injected here -->
-</section>
+<section class="elemental-tab-wrapper">
+  <section class="circle-controls">
+    <label for="nodeCountInput">Number of Elements</label>
+    <input type="number" id="nodeCountInput" min="1" max="12" value="3">
+    <button id="updateNodesButton">Update</button>
+  </section>
 
-<section class="circle-controls">
-  <label for="nodeCountInput">Number of Elements</label>
-  <input type="number" id="nodeCountInput" min="1" max="12" value="3">
-  <button id="updateNodesButton">Update</button>
+  <section class="elemental-circle-container">
+    <div class="circle center" id="main-circle"></div>
+    <!-- Triangle Nodes will be injected here -->
+  </section>
 </section>
