added collor picker

--- a/templates/elements-tab.hbs
+++ b/templates/elements-tab.hbs
@@ -1,7 +1,9 @@
 <section class="elemental-tab-wrapper">
   <section class="circle-controls">
     <label for="nodeCountInput">Number of Elements</label>
-    <input type="number" id="nodeCountInput" min="1" max="12" value="3">
+    <input type="number" id="nodeCountInput" min="1" max="12" value="3" />
+    <label for="themeColorPicker" style="margin-top: 0.5em;">Theme Color</label>
+    <input type="color" id="themeColorPicker" />
     <button id="updateNodesButton">Update</button>
   </section>
 
